# wica

./: Cargo.toml  README.md
src/: app.rs  cli.rs  event.rs  http_request.rs  main.rs
src/components/: help_message.rs  mod.rs
src/components/request/: body.rs  method.rs  mod.rs  query.rs  url.rs
src/components/response/: body.rs  delay.rs  header.rs  mod.rs  status.rs  tab.rs
src/ui/: default_key_handle.rs  mod.rs
